--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,29 +1,33 @@
-<div>
-  <ion-content [fullscreen]="true" padding="none" margin="none">
-    <ion-tabs>
-      <ion-tab-bar slot="top" mode="md">
-      </ion-tab-bar>
-    </ion-tabs>
 
-    <div id="container">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>
+        Home
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content [fullscreen]="true" padding="none" margin="none">
 
       <!-- if user is registered -->
-      <!-- <div class="registered-wrapper" *ngIf="authState === 'signedin' && already_registered">
-        <ion-card *ngIf="!profilepicid" color="danger">
-          <ion-card-content (click)="uploadProfilePic()">
+
+      <ion-card *ngIf="!profilepicid && already_registered" color="danger">
+        <ion-card-content (click)="uploadProfilePic()">
+          <div class="upload-msg-div">
             <small>It looks like you haven't uploaded a profile picture yet.</small>
             <div class="upload-div">
-              <strong>Upload Now</strong><ion-icon class="upload-arrow" color="light" name="arrow-forward-circle-outline"></ion-icon>
+              <strong>Upload Now</strong>&nbsp;<ion-icon class="upload-arrow" color="light" name="arrow-forward-circle-outline"></ion-icon>
             </div>
-          </ion-card-content>
-        </ion-card>
-        <ion-card>
-          <ion-card-content>
+          </div>
+        </ion-card-content>
+      </ion-card>
+      <ion-card *ngIf="already_registered">
+        <ion-card-content>
+          <div class="hello-div">
             <ion-card-title>Hi, {{username}}!</ion-card-title>
-            <small>Welcome to the Alexander-Friedman family website.</small>
-          </ion-card-content>
-        </ion-card>
-      </div> -->
+            <small>Welcome to the feta.</small>
+          </div>
+        </ion-card-content>
+      </ion-card>
 
       <!-- if user is not registered -->
       <ion-card *ngIf="createProfile">
@@ -36,7 +40,5 @@
           <ion-button color="light" class="lets-go-button" (click)="openModal()">Let's Go&nbsp;<ion-icon name="arrow-forward-circle-outline"></ion-icon> </ion-button>
         </ion-card-content>
       </ion-card>
-      
-    </div>
+
   </ion-content>
-</div>
