--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,93 +1,8 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-ion-card {
-  box-shadow: none !important;
-  margin-top: -50px;
-}
-
-ion-tab-bar {
-  width: 100% !important;
-}
-
-ion-icon:hover {
-  cursor: pointer;
-}
-
-ion-icon {
-  height: 24px;
-  width: 24px;
-  color: black;
-
-  --ionicon-stroke-width: 30px !important;
-}
-
-#container {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  max-width: 600px;
-  margin: auto;
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
 .loading-top {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-}
-
-.nav-wrapper {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 600px;
 }
 
 img {
@@ -102,9 +17,16 @@ img {
   font-weight: 600;
 }
 
-.upload-div{
+.upload-div {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.upload-msg-div, .hello-div {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
