--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,25 +1,27 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Home</ion-label>
+    <ion-tab-button (click)="homeClick()" tab="home">
+      <ion-icon *ngIf="!homeclick" name="home-outline"></ion-icon>
+      <ion-icon *ngIf="homeclick" name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="timeline">
-      <ion-icon name="image-outline"></ion-icon>
-      <ion-label>Timeline</ion-label>
+    <ion-tab-button (click)="timelineClick()" tab="timeline">
+      <ion-icon *ngIf="!timelineclick" name="image-outline"></ion-icon>
+      <ion-icon *ngIf="timelineclick" name="image"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="message-board">
-      <ion-icon name="chatbubbles-outline"></ion-icon>
-      <ion-label>Message Board</ion-label>
+    <ion-tab-button (click)="messageClick()" tab="message-board">
+      <ion-icon *ngIf="!messageclick" name="chatbubbles-outline"></ion-icon>
+      <ion-icon *ngIf="messageclick" name="chatbubbles"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="profile">
-      <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>Profile</ion-label>
+    <ion-tab-button class="profile-button" (click)="profileClick()" tab="profile/{{username}}">
+      <ion-icon *ngIf="!profileclick" name="person-circle-outline"></ion-icon>
+      <ion-icon *ngIf="profileclick" name="person-circle"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
+  
+  
 
 </ion-tabs>
