--- a/src/app/pages/timeline/timeline.page.html
+++ b/src/app/pages/timeline/timeline.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
       Timeline
@@ -7,11 +7,4 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Timeline</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-home name="Timeline"></app-home>
 </ion-content>
