updates profile and timeline, ready for video

--- a/src/app/modals/update-profile-modal/update-profile-modal.page.scss
+++ b/src/app/modals/update-profile-modal/update-profile-modal.page.scss
@@ -58,9 +58,9 @@ ion-row {
 
 
     ion-input {
-        // background: whitesmoke;
         padding: 0em 0.5em !important;
         border-bottom: 1px solid whitesmoke;
+        text-transform: lowercase !important;
     }
 }
 
