--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar class="footer-scroll" slot="bottom">
     <ion-tab-button (click)="homeClick()" tab="home">
       <ion-icon *ngIf="!homeclick" name="home-outline"></ion-icon>
       <ion-icon *ngIf="homeclick" name="home"></ion-icon>
