--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -2,6 +2,18 @@
     padding: 0 1em;
 }
 
+.no-photos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 200px;
+
+    h5 {
+        color: var(--ion-color-medium);
+        font-weight: 500;
+    }
+}
+
 ion-content{
     display: flex !important;
     justify-content: center !important;
@@ -155,7 +167,7 @@ ion-icon {
         align-items: center;
         min-width: 100%;
     }
-
+    
     .square {
         width: 99.8%;
         padding-bottom: 99.8%;
@@ -163,7 +175,9 @@ ion-icon {
         background-size: cover;
         background-position: center;
         object-fit: contain;
-      }
+        aspect-ratio: 1;
+    }
+    
 
 }
 
