--- a/src/global.scss
+++ b/src/global.scss
@@ -233,3 +233,9 @@ ion-tab-button {
     --color-selected: black !important;
 }
 
+.footer-scroll {
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+}
+
