--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -55,7 +55,13 @@
             <swiper class="mySwiper" effect="fade" [zoom]="true">
               <ng-template swiperSlide>
                 <div class="swiper-zoom-container">
-                  <img id="photo_{{image.imagesID}}" class="swiper-lazy" [src]="image.url" loading="lazy" width="100vw" height="400"/>
+                  <img *ngIf="!image.isVideo" id="photo_{{image.imagesID}}" class="swiper-lazy" [src]="image.url" loading="lazy" width="100vw" height="400"/>
+                  <video *ngIf="browser === 'chrome' && image.isVideo" [src]="image.url" class="video-div" width="100%" height="100%"
+                    autoplay="autoplay" controls="true" preload="metadata" muted playsinline mimeType="audio/mpeg"></video>
+                  <video *ngIf="browser === 'safari' || browser === 'other' && image.isVideo" class="video-div" width="100%" height="100%"
+                    autoplay="autoplay" controls="true" preload="metadata" muted playsinline>
+                    <source [src]="image.url" type="video/mp4">
+                  </video>
                 </div>
               </ng-template>
             </swiper>
