more video optimization

--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,12 +1,7 @@
 
 
-<!-- loading spinner -->
-<!-- <div *ngIf="!loaded" class="loading-centered">
-  <ion-spinner name="lines-small"></ion-spinner>
-</div> -->
-
 <!-- pull and refresh option at top -->
-<ion-content id="wall-content" lines="none" #container>
+<ion-content [scrollEvents]="true" (ionScroll)="didScroll()" id="wall-content" lines="none" #container>
 
   <ion-refresher lines="none" slot="fixed" (ionRefresh)="refreshData($event)">
     <ion-refresher-content
@@ -59,11 +54,9 @@
                 </div>
               </ng-template>
             </swiper>
-            <div *ngIf="image.isVideo">
-              <video *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-div" width="100%"
-                height="100%" autoplay="autoplay" controls="true" preload="metadata" autoplay muted playsinline loop></video>
-              <video *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-div" width="100%"
-                height="100%" autoplay="autoplay" controls="true" preload="metadata" autoplay muted playsinline loop>
+            <div class="video-container" *ngIf="image.isVideo">
+              <video #timelineVideo *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-playing" preload="auto" playsinline></video>
+              <video #timelineVideo *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-playing" preload="auto" playsinline>
                 <source [src]="image.mediaSource" type="video/mp4">
               </video>
             </div>
