--- a/src/app/pages/timeline/timeline.page.html
+++ b/src/app/pages/timeline/timeline.page.html
@@ -10,5 +10,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+    <!-- loading spinner -->
+    <div *ngIf="!loaded" class="loading-centered">
+      <ion-spinner name="lines-small"></ion-spinner>
+    </div>
     <app-timeline [datalength]="timelineDataLength" [data]="timelineData"></app-timeline>
 </ion-content>
