--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -55,10 +55,12 @@
               </ng-template>
             </swiper>
             <div class="video-container" *ngIf="image.isVideo">
-              <video #timelineVideo *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-playing" preload="auto" playsinline></video>
-              <video #timelineVideo *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-playing" preload="auto" playsinline>
+              <vg-player>
+                <video #timelineVideo type="video/mp4" *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-playing" preload="auto" playsinline muted></video>
+              </vg-player>
+              <!-- <video #timelineVideo *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-playing" preload="metadata" muted playsinline>
                 <source [src]="image.mediaSource" type="video/mp4">
-              </video>
+              </video> -->
             </div>
             <ion-list lines="none" mode= "md">
               <ion-tab-bar lines="none" id="interaction_{{image.imagesID}}" class="interactions-photos">
