--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -55,8 +55,8 @@
               </ng-template>
             </swiper>
             <div class="video-container" *ngIf="image.isVideo">
-              <video #timelineVideo type="video/mp4" *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-playing" preload="auto" playsinline muted></video>
-              <video #timelineVideo *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-playing" preload="metadata" muted playsinline>
+              <video #timelineVideo type="video/mp4" *ngIf="(browser === 'chrome') && image.isVideo" [src]="image.mediaSource" class="video-playing" controls autoplay preload="auto" playsinline muted></video>
+              <video #timelineVideo *ngIf="(browser === 'safari' || browser === 'other') && image.isVideo" class="video-playing" preload="auto" controls autoplay muted playsinline>
                 <source [src]="image.mediaSource" type="video/mp4">
               </video>
             </div>
