--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -85,39 +85,64 @@ ion-icon {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    height: auto;
+    margin: 0 auto;
 
     .username-header {
         justify-content: center;
         align-items: center;
         display: flex;
-        font-size: 1.01em;
+        font-size: 1em;
         margin-top: 0.5em;
         font-weight: 600;
     }
 
-    .right-top-profile {
-        display: flex;
-        padding: 0em 0em 0em 2em;
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
+    .left-top-profile {
+        flex: 45;
+    }
+
+    .right-top-profile-wrapper {
+        flex: 55;
+    
+        .right-top-profile{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+
     }
 
     .stats-div {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        height: 2em;
+        flex-direction: column;
 
         .stats-count {
-            font-size: 1.5em;
-            padding-right: 0.25em;
-            padding-top: 0.25em;
+            font-size: 1.75em;
+            display: flex;
+            justify-content: center;
+            margin: 0 auto;
+        }
+
+        .stats-text {
+            font-size: 0.65em;
+            margin: -0.5em auto;
         }
     }
+
+
   }
+
+  .bio {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1em;
+
+    p {
+        font-size: 0.75em;
+    }
+}
 
   .top-of-profile {
     display: flex;
@@ -160,7 +185,7 @@ ion-icon {
   }
 
 .postedphotos {
-    .postedphotos_row {
+    .postedphotos_row, .postedvideos_row {
         display: flex;
         flex-direction: row;
         margin: 0;
@@ -176,6 +201,12 @@ ion-icon {
         background-position: center;
         object-fit: contain;
         aspect-ratio: 1;
+
+        .video-playing {
+            max-width: 100px;
+            max-height: 100px;
+            background-color: black !important;
+        }
     }
     
 
