--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -5,12 +5,24 @@ img {
     height: auto;
 }
 
-.video-playing {
-    width: 100vw;
-    height: auto;
-    margin: 0 auto;
-    background-color: black;
+video {
+    width: 100%;
+    height: 600px;
+    position: relative;
+    object-fit: cover;
 }
+
+video:before {
+    background: rgba(0, 0, 0, 0.5); /* You can use here image */
+    width: 100%;
+    height: 500px;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
 
 ion-header {
     box-shadow: none !important;
